@@ -1,6 +1,7 @@
 0.30
 Added 0.6 support.
 Enhanced the pgsql tasks and schema to support "action" columns and introduced a stored procedure called during every changeset application.
+Added ability to specify slipping map zoom and coordinates as arguments to the bounding box filter.
 
 0.29
 Fixed the --write-pgsql-simple-dump task to properly escape '\' characters.
